Fix wrapping with cariable margins

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a:hover {
     color: white;
 }
 header {
-    padding: 16px 96px;
+    padding: 16px 7%;
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
@@ -35,15 +35,19 @@ header {
 
 /* Hero text section */
 .hero-container {
-    padding: 16px 128px;
+    padding: 64px 10%;
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     gap: 32px;
 }
 .hero-container > img {
     height: 256px;
+}
+.hero-text {
+    max-width: 50%;
 }
 .hero-text h1 {
     font-size: 48px;
@@ -72,7 +76,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px 16px;
+    padding: 64px 10%;
 }
 .infocards-container > h2 {
     font-size: 24px;
@@ -104,7 +108,7 @@ header {
     background-color: #E5E7EB;
     color: #1F2937;
     font-size: 24px;
-    padding: 32px 256px;
+    padding: 64px 20%;
     display: flex;
     flex-direction: column;
 }
